Fixed overflow issue with repl

--- a/plugins/repl/main.css
+++ b/plugins/repl/main.css
@@ -13,8 +13,9 @@
   display: flex;
   flex-flow: column;
 }
-#repl-window span:not(:first-child) {
-  height: 20px;
+#repl-window > span:not(:first-child) {
+  min-height: 20px;
+  height: fit-content;
   width: 100%;
   display: block;
   -webkit-user-select: initial;
@@ -40,7 +41,7 @@ span.current-text {
   flex-grow: 1;
   flex-shrink: 0;
 }
-#repl-window span::before {
+#repl-window > span::before {
   content: '> ';
 }
 span.result-text::before {
